fix: adjust row-gap and gap values in clients section styles for improved layout

--- a/_codux/boards/clients-section.board.css
+++ b/_codux/boards/clients-section.board.css
@@ -1,6 +1,6 @@
 .clients {
     padding: 40px;
-    row-gap: 60px;
+    row-gap: 32px;
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
@@ -10,36 +10,25 @@
     display: flex;
     @media (width <= 768px) {
         flex-direction: column-reverse;
-        row-gap: 50px;
+        row-gap: 32px;
     }
 }
 
 .clientsContentTexts {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 8px;
     padding-right: 40px;;
-    @media (width < 480px) {
-        align-items: center;
-    }
 }
 
 .clientsTitle {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.3;
-
-    @media (width <= 768px) {
-        font-size: 22px;
-    }
+    font-size: 40px;
 }
 
 .clientsDescription {
     font-size: 16px;
-    line-height: 1.6em;
-    @media (width <= 768px) {
-        width: 100%;
-    }
+    line-height: 20px;
 }
 
 .clientsImage {
